@@ -62,18 +62,18 @@ module Inflector
 
     def singular_rules #:doc:
       [
-          [/(x|ch|ss)es$/, '\1'],
-          [/movies$/, 'movie'],
-          [/([^aeiouy]|qu)ies$/, '\1y'],
-          [/([lr])ves$/, '\1f'],
-          [/([^f])ves$/, '\1fe'],
-          [/(analy|ba|diagno|parenthe|progno|synop|the)ses$/, '\1sis'],
-          [/([ti])a$/, '\1um'],
-          [/people$/, 'person'],
-          [/men$/, 'man'],
-          [/status$/, 'status'],
-          [/children$/, 'child'],
-          [/s$/, '']
-        ]
+        [/(x|ch|ss)es$/, '\1'],
+        [/movies$/, 'movie'],
+        [/([^aeiouy]|qu)ies$/, '\1y'],
+        [/([lr])ves$/, '\1f'],
+        [/([^f])ves$/, '\1fe'],
+        [/(analy|ba|diagno|parenthe|progno|synop|the)ses$/, '\1sis'],
+        [/([ti])a$/, '\1um'],
+        [/people$/, 'person'],
+        [/men$/, 'man'],
+        [/status$/, 'status'],
+        [/children$/, 'child'],
+        [/s$/, '']
+      ]
     end
 end
